--- a/css/indexResponsive.css
+++ b/css/indexResponsive.css
@@ -47,7 +47,7 @@
     }
     .block2 {
         height: unset;
-        padding: 5% 0;
+        padding: 100px 0;
     }
     .block4 {
         flex-direction: column;
